<resources>
    <string name="app_name">优销移动</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="caoshi">营销</string>
    <string name="paomadeng">这是跑马灯的效果这是跑马灯的效果</string>
    <string name="capture_tip">请将条码置于取景框内扫描</string>
    <string name="scan_text">将二维码/条码放入框内，即可自动扫描</string>
    <string name="scanDialogTitle">条码内容</string>
    <string name="sure">确定</string>
    <string name="animationContentDescription">渐变图片动画描述</string>
    <string name="cancel">取消</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="soft_updating">正在更新</string>
    <string name="server_settings">服务器设置</string>
    <string name="title_activity_set_server_port">SetServerPortActivity</string>
    <string name="case_edit_table_name">请输入表名(异常表或错误表)</string>
    <string name="refer">查询</string>
    <string name="Hint">温馨提示</string>
    <string name="backActivity">确定要退出应用?</string>
    <string name="back_shop">确定要退出此店面?</string>
    <string name="jijiuxiang">急救箱</string>
    <string name="return_back">返回</string>
    <string name="youxiao_login_RL_user">请输入手机号/工号</string>
    <string name="login_more">更多</string>
    <string name="login_miss_pwd">忘记密码?</string>
    <string name="youxiao_login_RL_pwd">请输入密码</string>
    <string name="downloading">下载中...</string>
    <string name="selector">选择商品</string>
    <string name="system_setting">系统设置</string>
    <string name="disturbance">勿扰模式</string>
    <string name="gestures_password">手势密码登陆</string>
    <string name="sys_data">同步数据</string>
    <string name="data_retroaction">数据反馈</string>
    <string name="bluetooth_connect">蓝牙连接</string>
    <string name="push_message">推送消息</string>
    <string name="RichScan">扫一扫</string>
    <string name="commodity_search">商品搜索</string>
    <string name="sales_module">销售模块</string>
    <string name="run_order_list">跑单列表</string>
    <string name="balance">结算</string>
    <string name="comment">备注</string>
    <string name="commit">提交</string>
    <string name="skipper">跑单列表</string>
    <string name="item_skipper_list_date">跑单日期</string>
    <string name="item_skipper_list_order">订单单号</string>
    <string name="customerName">客户名称</string>
    <string name="item_skipper_list_total">总金额</string>
    <string name="advance">使用预付款</string>
    <string name="discount">折扣金额</string>
    <string name="skipper_name">跑单人</string>
    <string name="skipper_detail">跑单明细</string>
    <string name="search">搜索</string>
    <string name="commodity_Template">商品模板</string>
    <string name="tradition_trench">传统渠道</string>
    <string name="modern_trench">现代渠道</string>
    <string name="special_trench">特通渠道</string>
    <string name="A_type_template">A类模板</string>
    <string name="B_type_template">B类模板</string>
    <string name="C_type_template">C类模板</string>
    <string name="D_type_template">D类模板</string>
    <string name="history_sales_data">历史销售数据</string>
    <string name="safety">账号与安全</string>
    <string name="account_number">账号</string>
    <string name="relieve_bound">解除绑定</string>
    <string name="amend_password">修改密码</string>
    <string name="amend_gesture_password">修改手势密码</string>
    <string name="version_information">版本信息</string>
    <string name="version_number">版本号:</string>
    <string name="list_number">序列号:</string>
    <string name="port_number">端口号:</string>
    <string name="message_number">通讯号:</string>
    <string name="ip_location">IP地址:</string>
    <string name="data_library">数据库:</string>
    <string name="version_name">版本名:</string>
    <string name="can_not_find_version_name">没有找到版本号</string>
    <string name="about_us">关于我们</string>
    <string name="official_website">官方网站</string>
    <string name="Focus_on_WeChat">关注微信</string>
    <string name="share_WeChat">分享微信</string>
    <string name="feedback">意见反馈</string>
    <string name="company_name">销客智融科技</string>
    <string name="company_id">Copyright ©2013-2015 Xaoke All Rights Reserved</string>
    <string name="fankui">反馈</string>
    <string name="shoukuanma">收款码</string>
    <string name="choose_shop">选择客户</string>
    <string name="scan_ka">请扫客户卡</string>
    <string name="sales_skipper_title">销售开单查询</string>
    <string name="run_name">跑单</string>
    <string name="chexiao_name">车销</string>
    <string name="modification_comment">修改单据将先自动红冲,确定修改?</string>
    <string name="red_rush_comment">确定红冲本单?</string>
    <string name="print_comment">正在提交打印信息,请在打印结束后关闭</string>
    <string name="print_comment_one">有未上传数据,是否据需?</string>
    <string name="continues">继续</string>
    <string name="detection">检测</string>
    <string name="order_send_detection">确定单据上传检测?</string>
    <string name="old_password">请输入原密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="new_password_again">请再次输入新密码</string>
    <string name="accomplish">完成</string>
    <string name="dialog_content_tovoid">作废后将无法发送,请确定该数据作废?</string>

    <!--  Device List Activity  设备列表活动-->
    <string name="scanning">扫描设备…</string>
    <string name="select_device">选择连接的设备</string>
    <string name="none_paired">没有匹配的设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">匹配的设备</string>
    <string name="title_other_devices">其它可用设备</string>
    <string name="button_scan">扫描设备</string>
    <string name="print">打印设置</string>
    <string name="cannot_devices">无法连接设备</string>
    <string name="devices_connect_lose">设备连接丢失</string>
    <!--蓝牙打印机-->
    <string name="send">打印</string>
    <string name="Print">打印1</string>
    <string name="Clear">清空</string>
    <string name="not_connected">请先连接蓝牙打印机（菜单->连接）</string>
    <string name="bt_not_enabled_leaving">蓝牙没有启动，退出程序</string>
    <string name="title_connecting">正在连接…</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">没有连接</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">打印灰度</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <!-- 选项菜单 -->
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="find">刷新</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
