<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.me.accountandsafety.AmendPwdActivity">

    <RelativeLayout
        android:id="@+id/activity_amend_pwd_RL_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/activity_amend_pwd_LL_back"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/accomplish"
                android:src="@drawable/i" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/return_back"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_remove_bound_template_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/amend_password"
            android:textColor="@color/grey900"
            android:textSize="18sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="#ccc" />

    <EditText
        android:id="@+id/activity_amend_pwd_ET_oldPwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/old_password"
        android:singleLine="true"
        android:textColor="@color/grey700"
        android:textColorHint="@color/grey400"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#ccc" />

    <EditText
        android:id="@+id/activity_amend_pwd_ET_newPwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:singleLine="true"
        android:textColor="@color/grey700"
        android:textColorHint="@color/grey400"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#ccc" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/new_password_again"
        android:singleLine="true"
        android:textColor="@color/grey700"
        android:textColorHint="@color/grey400"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#ccc" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:hint="请输入用户名"
            android:textColor="@color/grey700"
            android:textColorHint="@color/grey400"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_amend_pwd_btn_accomplish"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_btn_void"
        android:text="@string/accomplish"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>
