<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_xiaobu"
              android:orientation="vertical"
              tools:context="com.youxiao.activity.EmergencyCase_Activity">

    <RelativeLayout
        android:id="@+id/activity_emergency_case_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/activity_emergency_case_back"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/titleName"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/case_RL_IV_back"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:src="@drawable/i"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:text="@string/return_back"
                android:textColor="@color/red"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/jijiuxiang"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/activity_emergencycase_LL_case"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="3"
            android:background="@drawable/search_et">

            <EditText
                android:id="@+id/activity_emergencycase_LL_case_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_horizontal_margin"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/case_edit_table_name"
                android:singleLine="true"
                android:textSize="12sp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/activity_emergencycase_btn_case"
            android:layout_width="40dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/search_et"
            android:text="@string/refer"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#ccc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

    </LinearLayout>
</LinearLayout>