<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_xiaobu"
    tools:context=".ui.activity.sales.collectOrder.CommentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/activity_comment_RL_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/comment"
            android:textColor="@color/red"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_comment_RL_content"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="8dp"
        android:background="@color/white">
        <EditText
            android:id="@+id/activity_comment_RL_ET_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:hint="请输入备注"
            android:textSize="14sp"
            android:background="@null"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray_xiaobu"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/activity_comment_sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:background="@drawable/background_selector"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/activity_comment_RL_sureTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/commit"
                android:textSize="14sp"
                android:textColor="@drawable/check_text"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_comment_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_marginLeft="1dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/background_selector"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/activity_comment_RL_cancleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/cancel"
                android:textSize="14sp"
                android:textColor="@drawable/check_text"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
