<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_xiaobu"
    tools:context=".Activity.meActivity.FeedbackActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/activity_feedback_RL_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/activity_feedback_back"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/activity_feedback_TV_titleName"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/i"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/return_back"
                android:textColor="@color/red"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/activity_feedback_TV_titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/activity_feedback_TV_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/activity_feedback_TV_titleName"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/fankui"
            android:textColor="@color/red"
            android:textSize="16sp"/>
    </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/search_et"
            android:orientation="vertical">
            <EditText
                android:id="@+id/activity_feedback_ET_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:hint="请输入您的意见..."
                android:textSize="14sp"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
